# autotagging

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
dataset_auto/1372288444/: metadata.json
dataset_auto/6073763036/: metadata.json
dataset_auto/7312112737/: metadata.json
dataset_auto/7356394536/: metadata.json
dataset_auto/7362119980/: metadata.json
dataset_mini/sample0001/: metadata.json
dataset_mini/sample0002/: metadata.json
dataset_mini/sample0003/: metadata.json
dataset_mini/sample0004/: metadata.json
dataset_mini/sample0005/: metadata.json
services/data_ingestion/: data_collection.py  scraping.py
services/db/init/: 001_create_db.sql  002_setup_ingestion_db.sql
services/labelstudio/: Dockerfile  setup_http_dataset.sh
src/: dataset_loader.py
src/autotagging/: data_collection.py  dataset_loader.py  prototype.py  prototype_smol.py
src/autotagging/data/: __init__.py  class_label_sets.json  clean_dataset_filenames.py  compute_dataset_set_labels.py  compute_labelstudio_json.py  preprocessing.py  scraping.py
src/autotagging/evaluation/: metrics.py  test_metrics.py
src/autotagging/inference/: main.py
src/autotagging/inference/pipeline/: item.py  runner.py  stages.py
src/autotagging/monitoring/: __init__.py  config.yaml
src/autotagging/schema/: item.py  item_config.py
src/schema/: item.py  item_config.py
