[project]
name = "autotagging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "torch>=2.8.0",
    "torchvision>=0.2.0",
    "ipython>=8.30.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.14.2",
    "vinted-scraper>=2.4.0",
    "python-box>=7.3.2",
    "torchmetrics>=1.8.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-requests",
]

